# soliton_encirclement

./: CONTROLE.md  README.md  agent_telemetry.csv  config_param.py  equacoes_controle_tangencial.md  main.py  plot_telemetry.py  protocol.py  protocol_agent.py  protocol_messages.py  protocol_target.py  pyproject.toml  target_telemetry.csv
examples/: ex_constant_velocity.py
src/gradysim_velocity_mobility/: __init__.py  config.py  handler.py
tests/: test_core_limits.py  test_core_step.py
